# micro-auth

./: Cargo.toml  README.md
src/: main.rs
src/_tests/: mod.rs
src/auth/: interfaces.rs  mod.rs
src/core/: mod.rs
src/core/errors/: mod.rs  validation.rs
src/core/from_request/: mod.rs  user.rs
src/core/jwt/: mod.rs
src/core/password/: mod.rs
src/core/response/: mod.rs
src/database/: mod.rs  schema.rs
src/permission/: controller.rs  model.rs
src/revoked_token/: controller.rs  mod.rs  model.rs  services.rs
src/role/: controller.rs  interfaces.rs  mod.rs  model.rs  services.rs
src/scope/: controller.rs  interfaces.rs  mod.rs  model.rs  tests.rs
src/service/: controller.rs  interfaces.rs  mod.rs  model.rs
src/user/: controller.rs  interfaces.rs  mod.rs  model.rs  services.rs  tests.rs
