[package]
name = "micro-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
derive_more = { version = "2.0.1", features = ["full"] }
derive_builder = "0.20.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_responder = "0.1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "chrono" ] }
chrono = {version = "0.4.40", features = ["serde"]}
pwhash = "1"
jsonwebtoken = "9.3.1"